[project]
name = "bilibili-following-analyzer"
version = "0.1.0"
description = "Analyze your Bilibili following list to find inactive or non-mutual follows"
requires-python = ">=3.10"
dependencies = [
    "requests>=2.28",
    "python-dotenv>=1.0",
]

[project.scripts]
bilibili-analyzer = "check:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
only-include = ["check.py"]

[tool.uv]
python-preference = "system"
